@@ -14,5 +14,15 @@ void block(int a,int b) {
 // main is called only once after VM init.
 int main() { 
     vms( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,0,0,0,0,0,1,0,0); 
-    vmi(TAPM,0,2583+(1906<<16),2508|(2419<<12)|(2<<24) ,2894+(19<<16)+(30<<24)); //parameters
+    vmi(TAPM,0,   // parameters
+    2583+         // limit0
+    (1906<<16),   // limit1
+    2508|         // limit2
+    (2419<<12)|   // limit3
+    (2<<24),      // wb1
+    2894+         // limit4
+    (19<<16)+     // w1
+    (30<<24)      // w2
+    ); 
+    
 }
