@@ -143,7 +143,7 @@ int main() {
     vms(1,0,1,0,0,0,0,1,0,2+S,1,0,0,2,8,0,1,2); 
     vmi(DS,0,17,1023 ,1);       // order 1
     vmi(DHS,0,4,26+(3<<8),S-1); // order 2+
-    vmi(UAS,0,10,13,5);
+    vmi(UAS,0,16,13,5);         // unaligned 16 bits, mask 13(ignored), rate 5
     for (i=0;i<S+1;i++) vmi(MM,i,0,i,0);
     vmi(SMC,0,64<<8,1023,0);   // match
     vmi(MX,0,m_p[0] +256*m_p[1]+0x1000000*m_p[2],80 ,0);
